--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -4,22 +4,17 @@
   <div class="card">
     <div class="card-body p-5">
       <div class="fs-4 fw-light text-reset">
-        Authors: <a href="https://maximgorbatyuk.github.io" target="_blank">Maxim Gorbatyuk</a>, in collaboration with
-        <a href="https://petrel.ai" target="_blank">"Petrel AI" LLC</a>
+        Author: <a href="https://maximgorbatyuk.github.io" target="_blank">Maxim Gorbatyuk</a>
       </div>
 
       <hr class="mt-3" />
       <div class="mt-3">
         <span><i class="bi bi-geo"></i></span>
-        <span class="ms-3">Kazakhstan, Almaty. Baizakov st, 280. SmartPoint, office 214</span>
-      </div>
-      <div class="mt-1">
-        <span><i class="bi bi-telephone-fill"></i></span>
-        <span class="ms-3">+7 (727) 313 20 50</span>
+        <span class="ms-3">Kazakhstan, Almaty</span>
       </div>
       <div class="mt-1">
         <span><i class="bi bi-envelope"></i></span>
-        <span class="ms-3">info@petrel.ai</span>
+        <span class="ms-3">ake111aa@yandex.ru</span>
       </div>
     </div>
   </div>
