--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="mt-1">
         <span><i class="bi bi-envelope"></i></span>
-        <span class="ms-3">ake111aa@yandex.ru</span>
+        <span class="ms-3">ake111aa&#64;yandex.ru</span>
       </div>
     </div>
   </div>
