--- a/src/app/modules/home/components/privacy-policy-page/privacy-policy-page.component.html
+++ b/src/app/modules/home/components/privacy-policy-page/privacy-policy-page.component.html
@@ -589,7 +589,7 @@
           <div class="h2">Contact Us</div>
           <p>Don't hesitate to contact us if you have any questions.</p>
           <ul>
-            <li>Via Email: info@petrel.ai</li>
+            <li>Via Email: info&#64;petrel.ai</li>
             <li>Via Phone Number: +77273132050</li>
             <li>Via this Address: Kazakhstan, Almaty, Baizakov st, 280. SmartPoint, office 214</li>
           </ul>
