--- a/src/app/shared/components/user-profile-page/user-profile-page.component.html
+++ b/src/app/shared/components/user-profile-page/user-profile-page.component.html
@@ -5,7 +5,7 @@
         <li class="list-group-item">
           <div class="small text-muted">Email</div>
           <div class="small">
-            {{ user?.email }}
+            {{ user?.email ?? '-' }}
           </div>
         </li>
 
