--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -1,6 +1,6 @@
 <app-page-header>Salaries</app-page-header>
 
-<div class="container my-5" *ngIf="true; else dataLoading">
+<div class="container my-5" *ngIf="salariesChart != null; else dataLoading">
     <div class="card">
       <div class="card-body">
         Salaries chart goes here
