--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -1,4 +1,4 @@
-<app-page-header>Salaries</app-page-header>
+<app-page-header>Зарплаты в Казахстане</app-page-header>
 
 <div class="container my-5" *ngIf="salariesChart != null; else dataLoading">
     <div class="card">
@@ -7,6 +7,12 @@
       </div>
     </div>
   </div>
+
+  <app-add-salary-modal
+    *ngIf="openAddSalaryModal"
+    (closed)="closeAddSalaryAction()"
+    (salaryAdded)="onSalaryAdded($event)"
+  ></app-add-salary-modal>
   
   <ng-template #dataLoading>
     <div class="container mt-5">
