--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -3,7 +3,35 @@
 <div class="container my-5" *ngIf="salariesChart != null; else dataLoading">
     <div class="card">
       <div class="card-body">
-        Salaries chart goes here
+        <div class="mb-3">
+          На графике можно увидеть зарплаты в Казахстане по разным специальностям IT. Данные заполняются самими пользователями.
+        </div>
+
+        <div *ngIf="salariesChart" class="row">
+          <div class="col-4">
+            <div class="mb-2">
+              <div class="text-muted">Всего зарплат</div>
+              <div class="h4">{{ salariesChart.countOfRecords }}</div>
+            </div>
+
+            <div class="mb-2">
+              <div class="text-muted">Специальностей</div>
+              <div class="h4">{{ salariesChart.salariesByProfession.length }}</div>
+            </div>
+
+            <div class="mb-2">
+              <button class="btn btn-outline-primary" (click)="openAddSalaryAction()">Добавить зарплату</button>
+            </div>
+          </div>
+
+          <div class="col-6">
+            <div class="text-muted">Средняя зарплата:</div>
+            <div class="">
+              <span class="display-2 mr-3">{{ salariesChart.averageSalary }}</span>
+              <span class="h4 text-muted">тенге.</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
