--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -8,28 +8,45 @@
         </div>
 
         <div *ngIf="salariesChart" class="row">
-          <div class="col-4">
-            <div class="mb-2">
-              <div class="text-muted">Всего зарплат</div>
-              <div class="h4">{{ salariesChart.countOfRecords }}</div>
-            </div>
+          <div class="col-3">
 
-            <div class="mb-2">
-              <div class="text-muted">Специальностей</div>
-              <div class="h4">{{ salariesChart.salariesByProfession.length }}</div>
-            </div>
-
-            <div class="mb-2">
-              <button class="btn btn-outline-primary" (click)="openAddSalaryAction()">Добавить зарплату</button>
-            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <div class="small text-muted">Всего зарплат</div>
+                <div class="h4">{{ salariesChart.countOfRecords }}</div>
+              </li>
+      
+              <li class="list-group-item">
+                <div class="small text-muted">Специальностей</div>
+                <div class="h4">{{ salariesChart.salariesByProfession.length }}</div>
+              </li>
+      
+              <li class="list-group-item">
+                <div class="small text-muted">Действия</div>
+                <div class="">
+                  <button class="btn btn-outline-primary btn-sm" (click)="openAddSalaryAction()">Добавить зарплату</button>
+                </div>
+              </li>
+            </ul>
           </div>
 
-          <div class="col-6">
-            <div class="text-muted">Средняя зарплата:</div>
-            <div class="">
-              <span class="display-2 mr-3">{{ salariesChart.averageSalary }}</span>
-              <span class="h4 text-muted">тенге.</span>
+          <div class="col-9 ps-5">
+            <div class="mb-5">
+              <div class="text-muted">Медианная зарплата:</div>
+              <div class="">
+                <span class="display-2 me-3">{{ salariesChart.medianSalary }}</span>
+                <span class="h4 text-muted">тенге.</span>
+              </div>
             </div>
+
+            <div class="mb-5">
+              <div class="text-muted">Средняя зарплата:</div>
+              <div class="">
+                <span class="display-2 me-3">{{ salariesChart.averageSalary }}</span>
+                <span class="h4 text-muted">тенге.</span>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
