Added warning title

--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -11,6 +11,10 @@
           Вы сможете посмотреть график только после добавления хотя бы одной зарплаты за последний год.
         </div>
 
+        <div class="mb-3">
+          <i>TODO: в скором времени будут добавлены график и возможность фльтрации данных по специальностям, грейдам и фреймворкам/языкам программирования</i>
+        </div>
+
         <div *ngIf="salariesChart" class="row">
           <div class="col-3">
 
