--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -22,19 +22,19 @@
           <div class="mb-3">
             <label>Зарплата в KZT. Если вы получаете в иной валюте, переведите в тенге.</label>
             <input formControlName="value" type="text" class="form-control" />
-            <app-field-error [field]="addSalaryForm.get('value')"></app-field-error>
+            <app-field-error [field]="addSalaryForm.get('value')" [max]="10000000" [min]="42500"></app-field-error>
           </div>
   
           <div class="mb-3">
             <label>Квартал</label>
             <input formControlName="quarter" type="text" class="form-control" />
-            <app-field-error [field]="addSalaryForm.get('quarter')"></app-field-error>
+            <app-field-error [field]="addSalaryForm.get('quarter')" [max]="4" [min]="1"></app-field-error>
           </div>
   
           <div class="mb-3">
             <label>Год</label>
             <input formControlName="year" type="text" class="form-control" />
-            <app-field-error [field]="addSalaryForm.get('year')"></app-field-error>
+            <app-field-error [field]="addSalaryForm.get('year')" [max]="2000" [min]="2100"></app-field-error>
           </div>
   
           <div class="mb-3">
@@ -59,6 +59,11 @@
               <option *ngFor="let option of grades" [value]="option.value">{{ option.label }}</option>
             </select>
             <app-field-error [field]="addSalaryForm.get('grade')"></app-field-error>
+          </div>
+
+          <div class="mb-3">
+            Отправляя данные, вы соглашаетесь, что <strong>обезличенная</strong> зарплата будет учтена при рассчетах и составлении графиков.
+            Мы гарантируем, что конфедициальность ваших данных будет соблюдена.
           </div>
   
           <div class="mb-3">
